# uav_config

./: CMakeLists.txt  README.md  package.xml
extrinsic_intrinsic/: body_four_camera.yaml
extrinsic_intrinsic/D435_SN_102422072335/: D435_102422072335_Intrinsics_Extrinsics.yaml
extrinsic_intrinsic/D435_SN_216322074755/: D435_216322074755_Intrinsics_Extrinsics.yaml
extrinsic_intrinsic/D435i_SN_044122070464/: D435_044122070464_Intrinsics_Extrinsics.yaml
extrinsic_intrinsic/D455_SN_037322251575/: D455_037322251575_Intrinsics_Extrinsics.yaml
extrinsic_intrinsic/D455_SN_037522250849/: D455_037522250849_Intrinsics_Extrinsics.yaml
extrinsic_intrinsic/D455_SN_215122251478/: D455_215122251478_Intrinsics_Extrinsics.yaml
include/uav_config/: read_config_drone.h
src/: uav_config_parse.cpp
types/: Imu.lcm  NameTime.lcm  PoseStamped.lcm  PositionStamped.lcm
types/lcm_geometry_msgs/: PoseStamped.hpp  PositionStamped.hpp
types/lcm_sensor_msgs/: Imu.hpp  Quaterniond.hpp
types/lcm_std_msgs/: NameTime.hpp
